--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^4.2.0",
+    "chartjs": "^0.3.24",
+    "cubejs": "^1.3.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-charts": "^2.0.0-beta.7",
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.0",
     "react-router-dom": "^6.4.3",
