--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.15",
+    "@mui/x-date-pickers": "^5.0.17",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.2.0",
     "chartjs": "^0.3.24",
+    "chartjs-adapter-moment": "^1.0.1",
     "cubejs": "^1.3.2",
+    "dayjs": "^1.11.7",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
