--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dayjs": "^1.11.7",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-card-flip": "^1.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-charts": "^2.0.0-beta.7",
     "react-dom": "^18.2.0",
