--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-charts": "^2.0.0-beta.7",
     "react-dom": "^18.2.0",
+    "react-fullscreen-loading": "0.0.4",
     "react-responsive": "^9.0.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
